[package]
name = "tequel-rs"
version = "0.3.0"
edition = "2024"
authors = ["Gabriel 'dotxav' Xavier <dotxavket@gmail.com>"]
description = "An authenticated simetric encrypt engine (AEAD), robust and caotic."
license = "MIT"
repository = "https://github.com/G4brielXavier/tequel-rs"
readme = "README.md"
keywords = ["cryptography", "encryption", "mac", "learning"]
categories = ["cryptography"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = "0.2"